init.common.rc: specify user of root for wpa_supplicant
which is required by SHIPPING API LEVEL 36, otherwise
the following build error will be reported:
    host_init_verifier: device/linaro/dragonboard/init.common.rc: 75: No user specified for service 'wpa_supplicant', so it would have been root.

Test: no build error reported

Change-Id: I8a0676dee68facd188e8d8d3e3fb3b3919438a17
Signed-off-by: Yongqin Liu <yongqin.liu@linaro.org>

--- a/init.common.rc
+++ b/init.common.rc
@@ -80,6 +80,7 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
     class main
     disabled
     oneshot
+    user root
 
 # TODO: disable this service once we implement system suspend
 service suspend_blocker /vendor/bin/suspend_blocker
